fix des border des user et du bouton sae et de l'alignement des users

--- a/frontend/src/style/colors.css
+++ b/frontend/src/style/colors.css
@@ -39,47 +39,47 @@
 /* BORDER COLORS WITH BOX SHADOW FOR DIV */
 
 .borsh_green {
-	border-color: var(--green);
+	border-color: var(--green) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(19, 213, 144, 0.5);
 }
 
 .borsh_red {
-	border-color: var(--red);
+	border-color: var(--red) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(229, 0, 51, 0.5);
 }
 
 .borsh_pink {
-	border-color: var(--pink);
+	border-color: var(--pink) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(224, 142, 225, 0.5);
 }
 
 .borsh_yellow {
-	border-color: var(--yellow);
+	border-color: var(--yellow) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(218, 203, 23, 0.5);
 }
 
 .borsh_white {
-	border-color: var(--white);
+	border-color: var(--white) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(182, 210, 225, 0.5);
 }
 
 .borsh_blue {
-	border-color: var(--blue);
+	border-color: var(--blue) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(0, 117, 253, 0.5);
 }
 
 .borsh_cyan {
-	border-color: var(--cyan);
+	border-color: var(--cyan) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(3, 199, 218, 0.5);
 }
 
 .borsh_violet {
-	border-color: var(--violet);
+	border-color: var(--violet) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(142, 0, 174, 0.5);
 }
 
 .borsh_dark_blue {
-	border-color: var(--dark_blue);
+	border-color: var(--dark_blue) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(0, 77, 113, 0.5);
 }
 
@@ -242,46 +242,46 @@ background
 /* BORDER COLORS */
 
 .bor_green {
-	border-color: var(--green);
+	border-color: var(--green) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(19, 213, 144, 0.5);
 }
 
 .bor_red {
-	border-color: var(--red);
+	border-color: var(--red) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(229, 0, 51, 0.5);
 }
 
 .bor_pink {
-	border-color: var(--pink);
+	border-color: var(--pink) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(224, 142, 225, 0.5);
 }
 
 .bor_yellow {
-	border-color: var(--yellow);
+	border-color: var(--yellow) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(218, 203, 23, 0.5);
 }
 
 .bor_white {
-	border-color: var(--white);
+	border-color: var(--white) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.1vw rgba(182, 210, 225, 0.5);
 }
 
 .bor_blue {
-	border-color: var(--blue);
+	border-color: var(--blue) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(0, 117, 253, 0.5);
 }
 
 .bor_cyan {
-	border-color: var(--cyan);
+	border-color: var(--cyan) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(3, 199, 218, 0.5);
 }
 
 .bor_violet {
-	border-color: var(--violet);
+	border-color: var(--violet) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(142, 0, 174, 0.5);
 }
 
 .bor_dark_blue {
-	border-color: var(--dark_blue);
+	border-color: var(--dark_blue) !important;
 	box-shadow: 0.25vw 0.25vw 0px -0.05vw rgba(0, 77, 113, 0.5);
 }
